deploy: rebase 캐시 삭제

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,9 @@ jobs:
           script: |
             cd /home/ubuntu/backend
             rm -rf src/main/resources/application.yaml
-            git pull origin main --rebase
+            git rebase --abort
+            rm -rf .git/rebase-merge
+            git pull origin develop --rebase
             echo "$APPLICATION_PROPERTIES" > src/main/resources/application.yaml
             ./gradlew clean build -x test
             sudo fuser -k -n tcp 8080 || true
