--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: appleboy/ssh-action@v1.0.3
         env:
           APPLICATION_PROPERTIES: ${{ secrets.APPLICATION_PROPERTIES }}
+          QNAS: ${{ secrets.QNAS }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
@@ -28,6 +29,7 @@ jobs:
             rm -rf src/main/resources/application.yaml
             git pull origin develop --rebase
             echo "$APPLICATION_PROPERTIES" > src/main/resources/application.yaml
+            echo "$QNAS" > src/main/resources/static/qnas.json
             ./gradlew clean build -x test
             sudo fuser -k -n tcp 8080 || true
             nohup java -jar build/libs/*SNAPSHOT.jar > ./output.log 2>&1 &
