--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,8 @@
 name: Deploy to EC2
 
 on:
+#  schedule:
+#    - cron: '0 0 * * *'
   pull_request_target:
     types: [closed]
     branches:
@@ -10,8 +12,6 @@ jobs:
   Deploy:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    env:
-      APPLICATION_PROPERTIES: ${{ secrets.APPLICATION_PROPERTIES }}
     steps:
       - name: SSH로 EC2 원격 접속하기
         uses: appleboy/ssh-action@v1.0.3
@@ -26,7 +26,7 @@ jobs:
           script: |
             cd /home/ubuntu/backend
             rm -rf src/main/resources/application.yaml
-            git pull origin main --rebase
+            git pull origin develop --rebase
             echo "$APPLICATION_PROPERTIES" > src/main/resources/application.yaml
             ./gradlew clean build -x test
             sudo fuser -k -n tcp 8080 || true
