--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
           script: |
             cd /home/ubuntu/backend
             rm -rf src/main/resources/application.yaml
-            git pull origin develop --rebase
+            git pull origin develop --rebase --strategy=recursive -X theirs
             echo "$APPLICATION_PROPERTIES" > src/main/resources/application.yaml
             ./gradlew clean build -x test
             sudo fuser -k -n tcp 8080 || true
